fix(backend): patch CORS allowed headers for X-User-Id and optimize booking controllers git commit -m "fix(frontend): sync auth service flatten response mapping and integrate history table component"